# libprcpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  build-libprcpp-debug.sh  build-libprcpp-release.sh
cmake/: project-0-pre_config.cmake  project-00-lib.cmake  project-00-setup.cmake  project-01-config.cmake  project-01-packages.cmake  project-02-subdirs.cmake  project-1-packages.cmake
cmake/archieve/: CMakeLists.2025_02_15
docs/prgent/: usage.md
src/libprcpp/: CMakeLists.txt  libprcpp.cc  libprcpp.hh
src/libprcpp/base/: config.in.hh
src/libprcpp/constants/: header_const.hh  host_const.hh  string_const.hh  template_const.hh
src/libprcpp/enums/: build_enums.hh  languages_enums.hh  os_enums.hh  requirement_enums.hh  result_enums.hh  scylla_enums.hh  time_enums.hh
src/libprcpp/functions/: common_funcs.cc  common_funcs.hh
src/libprcpp/interfaces/: idrogon_http_controller_helper.cc  ipostgresql_core_interface.cc  ipostgresql_core_interface.hh  iscylladb_core_interface.cc  iscylladb_core_interface.hh
src/libprcpp/modules/: cryptography_module.cc  cryptography_module.hh  date_and_time_module.cc  date_and_time_module.hh  network_module.cc  network_module.hh  system_module.cc  system_module.hh  utility_module.cc  utility_module.hh
src/libprcpp/src/libprcpp/: libprcpp.cc  libprcpp.h  libprcpp.hh
src/libprcpp/src/libprcpp/base/: config.in.h  config.in.hh
src/libprcpp/src/libprcpp/constants/: header_const.h  header_const.hh  host_const.h  host_const.hh  template_const.h
src/libprcpp/src/libprcpp/enums/: build_enums.h  build_enums.hh  encdec_enums.h  encdec_enums.hh  languages_enums.hh  os_enums.h  os_enums.hh  requirement_enums.h  requirement_enums.hh  result_enums.h  result_enums.hh  scylla_enums.h  scylla_enums.hh  time_enums.h  time_enums.hh
src/libprcpp/src/libprcpp/interfaces/: idrogon_http_controller_helper.cc  idrogon_http_controller_helper.h  idrogon_http_controller_helper.hh  ipostgresql_core_interface.cc  ipostgresql_core_interface.hh  iscylladb_core_interface.cc  iscylladb_core_interface.h  iscylladb_core_interface.hh
src/libprcpp/src/libprcpp/modules/: cryptography_module.cc  cryptography_module.h  cryptography_module.hh  date_and_time_module.cc  date_and_time_module.hh  network_module.cc  network_module.h  network_module.hh  system_module.cc  system_module.h  system_module.hh  utility_module.cc  utility_module.h  utility_module.hh
src/libprcpp/src/libprcpp/types/: auth_types.hh  basic_types.h  basic_types.hh  look_types.h  look_types.hh  ok_types.h  ok_types.hh  pdf_types.h  pdf_types.hh  scylla_types.h  scylla_types.hh
src/libprcpp/src/libprcpp/views/: view_drogon_html.csp
src/libprcpp/types/: basic_types.hh  ok_types.hh  pdf_types.hh
src/libprcpp/views/: view_drogon_404.csp
template/html/: hello.html
test/test_cryptography/: CMakeLists.txt  test_cryptography.cc  test_cryptography.h  test_cryptography.hh
test/test_csv_rw/: .gitignore  CMakeLists.txt  file_in.csv  test_csv_rw.cc
test/test_date_and_time/: CMakeLists.txt  test_date_and_time.cc
test/test_file_encdec/: .gitignore  CMakeLists.txt  file_in.json  test_file_encdec.cc
test/test_generate_pdf/: CMakeLists.txt  test_generate_pdf.cc
test/test_libprcpp/: .gitignore  CMakeLists.txt  test_libprcpp_barcode_qrcode.cc  test_libprcpp_cryptography.cc  test_libprcpp_date_and_times.cc  test_libprcpp_file_enc_dec.cc  test_libprcpp_parser_json.cc  test_libprcpp_pdf_maker.cc  test_libprcpp_scylladb.cc  test_libprcpp_scylladb.debug.json  test_libprcpp_sdl3_native_resolution.cc  test_libprcpp_smtps_curl.cc
test/test_parser_json/: CMakeLists.txt  file_in.json  file_in_compact.json  test_parser_json.cc
test/test_scylladb_drogon/: CMakeLists.txt  config.json  test_scylladb_drogon.cc
test/test_scylladb_drogon/plugins/: core_plugin.cc  core_plugin.hh  test_scylla.cc  test_scylla.h  test_scylla.hh
test/test_scylladb_uuidv4_nochecking/: CMakeLists.txt  config.debug.json  test_scylladb_uuidv4_nochecking.cc
test/test_smtps/: CMakeLists.txt  config.debug.json  test_smtps.cc
tools/prgent/: CMakeLists.txt  main.cc  usage.md
tools/prgent/inc/prgent/: main.hh
tools/prgent/src/prgent/: main.cc  main_proc.cc  main_proc.hh  prgent.cc  prgent.hh
tools/prgent/src/prgent/base/: config.in.hh
tools/prgent/src/prgent/constants/: args_const.hh  file_extension_const.hh  generate_const.hh
tools/prgent/src/prgent/enums/: file_extension_enums.hh  generate_enums.hh  return_enums.hh
tools/prgent/src/prgent/functions/: barcode_funcs.cc  barcode_funcs.hh  image_gen_funcs.cc  image_gen_funcs.hh  prgent_log_funcs.cc  prgent_log_funcs.hh  qrcode_funcs.cc  qrcode_funcs.hh
tools/prgent/src/prgent/types/: batch_types.hh
vendors/scylla-cpp-driver/src/: dc_aware_policy.cpp  dc_aware_policy.hpp
